# mandelbrot

./: Cargo.toml  LICENSE  README.md  shader.wgsl
.cargo/: config.toml
src/: compute.wgsl  controls.rs  defaults.rs  float.rs  fps_balancer.rs  fractal.rs  lib.rs  main.rs  overlay.rs  primitives.rs  renderer.rs  timer.rs  view_state.rs  visual.wgsl  wgpu_context.rs  wide_float.rs
src/fps_balancer/: mod.rs  native.rs  wasm.rs
src/gpu/: compute.rs  compute.wgsl  mod.rs  render.rs  render.wgsl
static/: index.html
