[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.3"
cfg-if = "1.0.0"
flume = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.1"
rayon = "1.8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.19.1", default-features = false, features = ["webgl"] }


[lib]
crate-type = ["cdylib", "rlib"]
